--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -7,6 +7,17 @@
   border-radius: 20px;
 }
 
+.flex {
+  display: flex;
+}
+
+.create-account-button {
+  height: 100%;
+}
+.create-account-container {
+  height: 50px;
+  align-items: center;
+}
 .input-border {
   border-bottom: 1px solid var(--ion-color-secondary);
 }
