--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -22,6 +22,10 @@
   border-bottom: 1px solid var(--ion-color-secondary);
 }
 
+.toast-danger {
+  color: var(--ion-color-light);
+}
+
 #loginlink {
   color: black;
   text-decoration: none;
