--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -36,12 +36,12 @@
   --ion-color-warning-shade: #e0ac08;
   --ion-color-warning-tint: #ffca22;
 
-  --ion-color-danger: #efd1d7;
-  --ion-color-danger-rgb: 239, 209, 215;
+  --ion-color-danger: #ee656b;
+  --ion-color-danger-rgb: 238, 101, 107;
   --ion-color-danger-contrast: #000000;
   --ion-color-danger-contrast-rgb: 0, 0, 0;
-  --ion-color-danger-shade: #d2b8bd;
-  --ion-color-danger-tint: #f1d6db;
+  --ion-color-danger-shade: #d1595e;
+  --ion-color-danger-tint: #f0747a;
 
   --ion-color-dark: #222428;
   --ion-color-dark-rgb: 34, 36, 40;
@@ -57,10 +57,10 @@
   --ion-color-medium-shade: #808289;
   --ion-color-medium-tint: #9d9fa6;
 
-  --ion-color-light: #efd0d6;
-  --ion-color-light-rgb: 236, 198, 204;
+  --ion-color-light: #f4f5f8;
+  --ion-color-light-rgb: 244, 245, 248;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d0aeb4;
-  --ion-color-light-tint: #eeccd1;
+  --ion-color-light-shade: #d7d8da;
+  --ion-color-light-tint: #f5f6f9;
 }
