--- a/src/components/LogoContainer.css
+++ b/src/components/LogoContainer.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 4rem;
+  padding: 2.5rem 0 1rem 0;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -10,5 +10,5 @@
 }
 
 .logo {
-  width: 350px;
+  width: 340px;
 }
