--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,16 +1,3 @@
-.form {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
-  border-radius: 20px;
-}
-
-.flex {
-  display: flex;
-}
-
 .create-account-button {
   height: 100%;
   font-size: 1rem;
@@ -19,18 +6,18 @@
 .create-account-container {
   height: 50px;
   align-items: center;
-  margin: 0 5px;
 }
 .input-border {
   border-bottom: 1px solid var(--ion-color-secondary);
 }
 
-.toast-danger {
-  color: var(--ion-color-light);
+.button-text {
+  text-transform: none;
+  text-align: start;
+  letter-spacing: 0;
+  font-size: 1rem;
 }
 
-#loginlink {
-  color: black;
-  text-decoration: none;
-  font-weight: bold;
+.login-register-button {
+  margin: 2rem;
 }
