--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -3,8 +3,9 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-
   border-radius: 20px;
+  margin: 2rem 1rem;
+  padding: 1rem 1rem;
 }
 
 .flex {
@@ -12,9 +13,51 @@
 }
 
 .toast-danger {
-  color: var(--ion-color-light);
+  color: var(--ion-color-dark);
 }
 
+.toast-success {
+  color: var(--ion-color-dark);
+}
 .dark {
   color: var(--ion-color-dark);
+}
+
+.secondary {
+  color: var(--ion-color-secondary);
+}
+
+.text-center {
+  text-align: center;
+}
+.small-logo {
+  width: 80px;
+}
+.primary-button {
+  background: radial-gradient(
+      120.83% 120.83% at 14.14% 112.5%,
+      rgba(185, 137, 145, 0.2) 0%,
+      rgba(255, 255, 255, 0) 100%
+    ),
+    rgba(252, 252, 253, 0.1);
+  box-shadow: 0px 3px 0px #d09ba4;
+  border-radius: 4px;
+}
+
+.big-avatar {
+  border-radius: 100%;
+  width: 80px;
+  height: 80px;
+}
+
+.small-avatar {
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
+}
+
+.avatar {
+  width: 100%;
+  height: 100%;
 }
