--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -7,7 +7,12 @@
   margin: 2rem 1rem;
   padding: 1rem 1rem;
 }
-
+.toolbar-container {
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 1rem;
+  height: 60px;
+}
 .flex {
   display: flex;
 }
