Add start of result page

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -23,6 +23,7 @@
   --ion-color-tertiary-tint: #f1d5da;
 
   --ion-color-success: #bdcd91;
+  --ion-color-success-dark: #a7ba79;
   --ion-color-success-rgb: 189, 205, 145;
   --ion-color-success-contrast: #000000;
   --ion-color-success-contrast-rgb: 0, 0, 0;
