--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -32,6 +32,21 @@
   color: var(--ion-color-secondary);
 }
 
+.success {
+  background-color: var(--ion-color-success-dark);
+}
+
+.danger {
+  background-color: var(--ion-color-danger);
+}
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: flex;
+}
 .text-center {
   text-align: center;
 }
