--- a/src/components/LoadingPage.css
+++ b/src/components/LoadingPage.css
@@ -2,5 +2,10 @@
   height: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   max-width: 100vw;
+}
+
+.loading {
+  width: 60%;
 }
