--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -6,6 +6,7 @@
 .create-account-container {
   height: 50px;
   align-items: center;
+  width: 100%;
 }
 .input-border {
   border-bottom: 1px solid var(--ion-color-secondary);
